# goku-agent

./: Cargo.toml  README.md
agent-commands/: Cargo.toml
agent-commands/src/: lib.rs
agent-commands/src/commands/: asm.rs  cmd.rs  download.rs  inject_sc.rs  mod.rs  named_pipes.rs  pipes_list.rs  psh.rs  scan.rs  upload.rs  wmic.rs
memory-map/: Cargo.toml
memory-map/src/: lib.rs
process-injection/: Cargo.toml
process-injection/src/: lib.rs
src/goku_tcp/: main.rs
src/goku_tcp/command/: handler.rs
