[package]
name = "process-injection"
version = "0.1.0"
authors = ["Shellchocolat <shell@chocolat>"]
description = "A rust library that can read/write the memory of other processes."
edition = "2018"

[dependencies]
libc = "0.2"
nix = "0.19.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "memoryapi", "minwindef", "processthreadsapi", "winuser", "handleapi"] }

[profile.release]
opt-level = 'z' # optimize for size
codegen-units = 1